address spellcheck and module access